--- a/rockfield/style-rtl.css
+++ b/rockfield/style-rtl.css
@@ -3514,6 +3514,15 @@ p:not(.site-title) a:hover {
 	font-size: 0.5rem;
 }
 
+#site-navigation > div > ul .sub-menu .menu-item a::before {
+	display: none;
+}
+
+#site-navigation > div > ul .sub-menu .menu-item a::after {
+	counter-increment: nested-list;
+	content: " –" counters(nested-list, " –", none);
+}
+
 @media only screen and (min-width: 560px) {
 	#site-navigation > div > ul > li:not(:first-child):before {
 		color: #99908A;
@@ -3537,13 +3546,6 @@ p:not(.site-title) a:hover {
 		right: auto;
 		left: 0;
 		text-align: left;
-	}
-	#site-navigation > div > ul > li > .sub-menu .menu-item a::before {
-		display: none;
-	}
-	#site-navigation > div > ul > li > .sub-menu .menu-item a::after {
-		counter-increment: nested-list;
-		content: " –" counters(nested-list, " –", none);
 	}
 }
 
